ml_service/health_test.txt
  File "<string>", line 6
    print(f'  status:       {data[\
                                 ^
SyntaxError: '[' was never closed
